# CS3110

./: .gitignore  .ocamlformat  README.md  playground.ml  test.ml
ch3/: binary_tree.ml  exception.ml  (+3 more)
chapters/ch8/: .ocamlformat  dune  dune-project  rbtree.ml
chapters/ch8/test/: dune  test.ml
exercise/: .ocamlformat  algebra.ml  ch2.ml  ch3.ml  ch5.ml  ch7.ml  ch8.ml  dune  dune-project  exercise.opam  test.ml
exercise/_build/: .db  .digest-db  log  oUnit-test suite for ch3.cache  oUnit-test suite for next_weekday.cache
exercise/_build/default/: algebra.ml  ch2.ml  ch3.ml  ch4.ml  exercise.cma  exercise.cmxa  exercise.cmxs  exercise.dune-package  exercise.install  exercise.ml-gen  test.ml
exercise/_build/default/.exercise.objs/: exercise__Algebra.impl.d  exercise__Ch2.impl.d  exercise__Ch3.impl.d  exercise__Ch4.impl.d  exercise__Ch5.impl.d
exercise/_build/default/.exercise.objs/byte/: exercise.cmi  exercise.cmo  exercise.cmt  exercise__Algebra.cmi  exercise__Algebra.cmo  exercise__Algebra.cmt  exercise__Ch2.cmi  exercise__Ch2.cmo  exercise__Ch2.cmt  exercise__Ch3.cmi  exercise__Ch3.cmo  exercise__Ch3.cmt  exercise__Ch4.cmi  exercise__Ch4.cmo  exercise__Ch4.cmt  exercise__Ch5.cmi  exercise__Ch5.cmo  exercise__Ch5.cmt
exercise/_build/default/.merlin-conf/: exe-test  lib-exercise
exercise/_build/default/.test.eobjs/: dune__exe.ml-gen  dune__exe__Test.impl.all-deps  dune__exe__Test.impl.d
exercise/_build/default/.utop/: utop.ml-gen
exercise/_build/default/test/: test.ml
exercise/file_monitor/: dune  dune-project  main.ml
exercise/test/: dune
(+108 files in other folders)
